--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "moment-timezone": "^0.5.48",
     "mongoose": "^8.14.1",
     "node-cron": "^3.0.3"
