--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "moment-timezone": "^0.5.48",
     "mongoose": "^8.14.1",
     "node-cron": "^3.0.3"
